force-app/main/default/objects/Location__c/Location__c.object-meta.xml
<CustomObject>
    <description>Registro centralizado de endereços utilizados no sistema para referência e associação com outros objetos.</description>
    <label>Localização</label>
    <nameField>
        <label>Nome da Localização</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Localizações</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>