force-app/main/default/objects/Location__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Cidade do endereço.</description>
    <inlineHelpText>Insira o nome da cidade conforme padrão oficial.</inlineHelpText>
    <label>Cidade</label>
    <length>20</length>
    <type>Text</type>
</CustomField>