force-app/main/default/objects/Location__c/fields/Landmark__c.field-meta.xml
<CustomField>
    <fullName>Landmark__c</fullName>
    <description>Ponto de referência próximo ao endereço.</description>
    <inlineHelpText>Informe um local conhecido nas proximidades para facilitar a localização.</inlineHelpText>
    <label>Ponto de Referência</label>
    <length>30</length>
    <type>Text</type>
</CustomField>