force-app/main/default/objects/Location__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>Código postal do endereço (CEP).</description>
    <inlineHelpText>Insira o CEP no formato correto do país (ex: 00000-000 para Brasil).</inlineHelpText>
    <label>Código Postal</label>
    <length>10</length>
    <type>Text</type>
</CustomField>