force-app/main/default/objects/Location__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Estado ou província do endereço.</description>
    <inlineHelpText>Informe o estado utilizando nome completo ou sigla padronizada (ex: PE, SP, RJ).</inlineHelpText>
    <label>Estado</label>
    <length>20</length>
    <type>Text</type>
</CustomField>