force-app/main/default/objects/Location__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>Logradouro do endereço (rua, avenida, etc.).</description>
    <inlineHelpText>Informe o nome da rua/avenida e, se aplicável, número e complemento.</inlineHelpText>
    <label>Rua</label>
    <length>30</length>
    <type>Text</type>
</CustomField>