force-app/main/default/objects/Location__c/fields/Verified__c.field-meta.xml
<CustomField>
    <fullName>Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se o endereço foi validado ou confirmado.</description>
    <inlineHelpText>Marque esta opção caso o endereço tenha sido verificado e esteja correto.</inlineHelpText>
    <label>Verificado</label>
    <type>Checkbox</type>
</CustomField>